--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -937,6 +937,8 @@ body {
     .table--alert .table__header-col:nth-child(5),
     .table--alert tr td:nth-child(5) {
       width: calc(10rem + 15px); }
+    .table--alert tbody {
+      max-height: 48rem; }
   .table--summary .table__scores--active {
     display: block; }
     .table--summary .table__scores--active thead {
@@ -956,6 +958,7 @@ body {
       justify-content: left;
       padding-left: 1rem; }
     .table--signal .table__header-col:nth-child(3),
+    .table--signal--asn tbody tr td:nth-child(3),
     .table--signal--asn .table__header-col:nth-child(4),
     .table--signal--asn tbody tr td:nth-child(4) {
       width: 10rem; }
@@ -987,7 +990,6 @@ body {
   .table thead tr:nth-child(odd) {
     background-color: #fff; }
   .table tbody {
-    max-height: 28rem;
     /* managed in component */
     /* overflow-y: scroll; */
     display: block;
@@ -2196,6 +2198,8 @@ button[class*="searchButton"] {
       .dashboard .tabs .tab__table .table {
         margin-bottom: 0;
         height: inherit; }
+        .dashboard .tabs .tab__table .table tbody {
+          max-height: 35rem; }
 
 .entity {
   padding-top: 5rem;
